построение loqi модели напрямую из исходной jena-модели, без посреднической jena-модели